# airtied-generator

./: .gitignore  README.md  analyze.py  convert.py  exmaple.py  fea_test.py  main.py  pipeline.py  platform_test.py  predict.py  pyproject.toml  test.py  train.py
ansys_fea/airtied_inflation/: airbag.k
ansys_fea/cylinder_buckling/: cylinder_buckling.k  force_displacement.csv
config/: bridge.yaml  search.yaml  tower.yaml
dino/: dino.json
fea/: coefficients.yaml  openseespy.py  pynite.py  test_fea.py  utils.py
fea/models/: beam_tower.json  complex_tower.json  crane.json  dino.json  dino_without_hands.json  floating_point.json  perpendicular_pyramid.json  simple_pyramid.json  single_beam.json  sparse_tower.json  triangle.json
generation/: constants.py  custom_loss.py  model.py  triangle_mesh_dataset.py
input/: bridge_hanging_flat.json  bridge_hanging_round.json  example.json  example_input_1.json  example_input_2.json  tower.json
output/: complex_pyramid.json  dino.json  example.json  example_tower_1.json  example_tower_2.json  simple_pyramid.json  triangle.json
output/tower/: 0.json
pipeline_draft/: config.py  example_input_1.json  example_input_2.json  example_tower_1.json  example_tower_2.json  generate_truss.py  visualize_input_json.py
search/: action.py  config.py  models.py  state.py  truss_environment.py  truss_search_tree.py  ucts.py  utils.py  visualize.py
search/config/: bridge.yaml  tower.yaml
search/input/: bridge.json  bridge_hanging_round.json  bridge_standing.json  tower.json
training_data/: example_truss.py  generate.py
util/: obj_reader.py
utils/: fea.py  models.py  parser.py  plot.py
