[tool.poetry]
name = "airtied-generator"
version = "0.1.0"
description = ""
authors = [
    "Hoang-An Nguyen <hoangan.nguyen@student.hpi.de>",
    "Hendrik Woelert <hendrik.woelert@student.hpi.de>",
    "Maximilian Franz <maximilian.franz@student.hpi.de>",
    "Stefan Spangenberg <stefan.spangenberg@student.hpi.de>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.12"
pyyaml = "^6.0.1"
matplotlib = "^3.9.0"
numpy = "1.26.4"
pynitefea = "^0.0.94"
scipy = "^1.13.1"
tqdm = "^4.66.4"
networkx = "^3.3"
openseespy = "^3.6.0.3"
scikit-spatial = "^7.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
